--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ p.top_hdp {
     color: #d2f2e9;
 }
 .banner-text-w3ls {
-    background: url(../images/banner1.jpg) no-repeat bottom;
+    background: url(../images/anh1.jpg) no-repeat bottom;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
